fix: auto-verify when email unavailable, async email, resend button